fix alignment on levis

--- a/theberrics.com/public_html/app/webroot/theme/levis-511-contest/css/layout_override.css
+++ b/theberrics.com/public_html/app/webroot/theme/levis-511-contest/css/layout_override.css
@@ -214,7 +214,7 @@ SECTION
 	
 	clear:both;
 	text-align:right;
-	min-height:28px;
+	
 }
 
 #levis-511-section .task .checkbox {
